--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset='utf-8' />
-<link rel='stylesheet' type='text/css' href='stylesheets/stylesheet.css' media='screen' />
-<link rel='stylesheet' type='text/css' href='stylesheets/pygment_trac.css' media='screen' />
+<link rel='stylesheet' type='text/css' href='/stylesheets/stylesheet.css' media='screen' />
+<link rel='stylesheet' type='text/css' href='/stylesheets/pygment_trac.css' media='screen' />
 <title>Frostyfrog's Blog</title>
 </head>
 <body>
