--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -12,7 +12,7 @@
 <h1>Frostyfrog</h1>
 <h2>The useless banter of a clever frog.</h2>
 <section id=downloads>
-<a href='https://github.com/frostyfrog' class='btn btn-github'><span class='icon'></span>Visit on GitHub</a>
+<a href='https://github.com/frostyfrog' class='btn btn-github'><span class='icon'></span>Visit on GitHub¿</a>
 </section>
 </div>
 </header>
