--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -9,7 +9,7 @@
 <body>
 <header>
 <div class='container'>
-<h1>Frostyfrog</h1>
+<a href='/'><h1>Frostyfrog</h1></a>
 <h2>The useless banter of a clever frog.</h2>
 <section id=downloads>
 <a href='https://github.com/frostyfrog' class='btn btn-github'><span class='icon'></span>Visit on GitHub¿</a>
