--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -57,6 +57,10 @@ header h1 {
   -webkit-font-smoothing: antialiased;
 }
 
+header a {
+  text-decoration: none;
+}
+
 header h1:before {
   content: "./";
   font-size: 24px;
